base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample
  labels:
    sample.com/POC: poc
    sample.com/AppID: APP00000
